Fix screen overflow with large numbers

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ button {
     display: inherit;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
 .calculator__display-text {
@@ -47,6 +48,7 @@ button {
     font-weight: bold;
     font-size: 36px;
     text-align: center;
+    max-width: 250px;
 }
 
 /* ********************************* Buttons ********************************** */
